# src/main/java/com/example/monolithfinancialsystem/api/controller/AccountController.java
@@ -2,6 +2,8 @@ package com.example.monolithfinancialsystem.api.controller;
 
 import com.example.api.AccountApi;
 import com.example.model.TransferRequest;
+import com.example.model.TransferResponse;
+import com.example.monolithfinancialsystem.service.processing.account.transfer.AccountTransferFacade;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -10,8 +12,11 @@ import org.springframework.web.bind.annotation.RestController;
 @RequiredArgsConstructor
 public class AccountController implements AccountApi {
 
+    private final AccountTransferFacade accountTransferFacade;
+
     @Override
-    public ResponseEntity<Void> transfer(TransferRequest transferRequest) {
-        return AccountApi.super.transfer(transferRequest);
+    public ResponseEntity<TransferResponse> transfer(TransferRequest transferRequest) {
+        TransferResponse response = accountTransferFacade.transfer(transferRequest);
+        return ResponseEntity.ok(response);
     }
 }
